update blockchain page

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </p>
 	<p class="socials">
 		<a href="mailto:alexandratran@pm.me"><img class="social" src="images/mail.png"></a>
-		<a href="https://www.linkedin.com/in/alexandra-tran/"><img class="social" src="images/linkedin.png"></a>
-		<a href="https://medium.com/@alexandratran"><img class="social" src="images/medium.png"></a>
+		<a href="https://www.linkedin.com/in/alexandra-tran/" target="_blank"><img class="social" src="images/linkedin.png"></a>
+		<a href="https://medium.com/@alexandratran" target="_blank"><img class="social" src="images/medium.png"></a>
 	</p>
     
 
