update philosophy page

--- a/blockchain.html
+++ b/blockchain.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <p class="text">
-    	A blockchain is a cryptographically linked list of “blocks”, which contain transaction data. It is the ledger, the backbone, of most cryptocurrencies (e.g., Bitcoin), and is typically maintained by a decentralized, peer-to-peer network governed by a consensus protocol. It is a data structure and a decentralized ecosystem model that may be applied to non-currency use cases.
+    	A blockchain is a cryptographically linked list of “blocks”, which contain data about transactions. It is the ledger, the backbone, of most cryptocurrencies (e.g., Bitcoin), and is typically maintained by a decentralized, peer-to-peer network governed by a consensus protocol. It is a data structure and a decentralized ecosystem model that may be applied to non-currency use cases.
 		<br><br>
-		I like blockchain technology because it turns our traditional assumptions about trust, authority, and coordination upside down and is a tool to undermine locked-in infrastructure (think banks, supply chains, energy distribution, etc.) in a provably secure manner.
+		I like blockchain technology because it subverts our traditional assumptions about trust, authority, and coordination, and is a tool to undermine or improve upon locked-in infrastructure (think banks, land registries, standard networking protocols, supply chains, etc.) in a provably secure manner.
 		<br><br>
 		Not all projects call for a blockchain. Not all blockchains are equal. Not all cryptocurrencies use blockchains.
 		<br><br>
