--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   	<img class="propic" src="images/iguana.png" alt="">
     <h2 class="name">Alexandra Tran</h2>
     <p class="hometext">Hello!
-    	<br>This is my Internet presence.
-		<br>These are some of the things I think about:
+    	<br>This is my central Internet presence.
+		<br>These are some of the things I think about on a regular basis:
     </p>
     <p class="nav">
     	<span class="link"><a href="blockchain.html">Blockchain</a></span>
