--- a/philosophy.html
+++ b/philosophy.html
@@ -8,7 +8,25 @@
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <p class="text">Philosophy is my highest pursuit.</p>
+    <p class="text">
+    	I live a partially examined life.
+    	<br><br>
+    	(This phrase is attributed to Socrates' <a class="textlink" href="https://en.wikipedia.org/wiki/The_unexamined_life_is_not_worth_living" target="_blank">famous quote</a>, and more so to this <a class="textlink" href="https://partiallyexaminedlife.com/" target="_blank">philosophy podcast</a> that I love.)
+    	<br><br>
+    	I am and always have been a voracious reader&mdash;which is how I encountered the field of philosophy when I was younger. It started with an interest in primary religious texts, then apologetics, then philosophy of religion, then metaphysics, epistemology, and moral philosophy. Discovering philosophy as a discipline was one of my most mind-boggling experiences. Philosophers, it seemed, were asking the most fundamental and nagging questions: Do we have free will? Does God exist? What exists? How do we know things? What is the nature of consciousness? What should we do? What do we mean by "should"?
+    	<br><br>
+    	Philosophers were not only asking these questions, but writing and arguing for countless theories as possible solutions. Moreover, philosophy seemed to pervade every field of study: mathemathics, physics, art, astronomy, etc. Whatever questions were the hardest, most abstract, and most unanswerable in field X were just considered a topic of study in "philosophy of X".
+    	<br><br>
+    	While the idea of philosophy being "the study of unanswerable questions" renders philosophy one of the most vibrant, wide-reaching, and thought-provoking disciplines, it also renders academic philosophy a risky vocational pursuit. These days, there is no such thing as "professional philosophers" besides philosophy professors.
+    	<br><br>
+    	That's <i>kind of</i> why I halted my undergrad philosophy studies. There was also the issue of having a romanticized view of what academic philosophy would be like going into college.
+    	<br><br>
+    	Regardless, philosophy is still one of my highest and most enjoyable pursuits. It is something I've been primed to be unable to avoid: my politics, career choices, religious views, and so on, all stem from personal philosophical conclusions. There is a heavy dose of philosophical literature in my reading pattern. I highly enjoy reading and writing about philosophy of science, philosophy of computation, philosophy of mind, logic, moral philosophy&mdash;and much of it is relevant to both my personal growth and my studies in math and computer science.
+    	<br><br>
+    	Even though I'm not an academic philosopher, an academic understanding of philosophy enriches my conversations, research, relationships, and worldview.
+    	<br><br>
+    	<br><br>
+    </p>
     <p class="nav">
     	<span class="link"><a href="index.html">Back</a></span>
      </p>
