--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
   	<img class="propic" src="images/iguana.png" alt="">
     <h2 class="name">Alexandra Tran</h2>
-    <p class="hometext">Hello!
-    	<br>This is my central Internet presence.
+    <p class="hometext">Hi there!<br>This is my central Internet presence.
 		<br>These are some of the things I think about on a regular basis:
     </p>
     <p class="nav">
@@ -21,7 +20,7 @@
     	<span class="link"><a href="music.html">Music</a></span>
     	<span class="link"><a href="literature.html">Literature</a></span>
     	<span class="link"><a href="misc.html">Misc</a></span>
-    </p>
+    </p><br>
 	<p class="socials">
 		<a href="mailto:alexandratran@pm.me"><img class="social" src="images/mail.png"></a>
 		<a href="https://www.linkedin.com/in/alexandra-tran/" target="_blank"><img class="social" src="images/linkedin.png"></a>
