--- a/philosophy.html
+++ b/philosophy.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Alexandra Tran</title>
+<title>Philosophy - Alexandra Tran</title>
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -21,15 +21,13 @@
     	<br><br>
     	That's <i>kind of</i> why I halted my undergrad philosophy studies. There was also the issue of having a romanticized view of what academic philosophy would be like going into college.
     	<br><br>
-    	Regardless, philosophy is still one of my highest and most enjoyable pursuits. Whether in the form of truth-seeking, asking hard questions, using formal philosophical tools, or tackling classic philosophy problems, philosophy is a large part of my life and is the bedrock upon which my worldview lies. Today, I highly enjoy reading and writing about philosophy of science (how do we grow scientific knowledge? what justifies induction?), philosophy of mind (what is it like to be something? are the mind and body separate?), logic (are our mathematical systems complete? are they decideable?), and moral philosophy (what is justice? what should we do?)&mdash;much of which is relevant to both my personal growth and my studies in math and computer science. I co-founded a <a class="textlink" href="https://pocab.wordpress.com/" target="_blank">philosophy of computation group</a> at Berkeley, now led by <a class="textlink" a href="https://www.ocf.berkeley.edu/~jjbaek/" target="_blank">Jerome Baek</a>, where students and professors can freely discuss topics in the intersection of philosophy and computer science.
+    	Regardless, philosophy is still one of my highest and most enjoyable endeavors. Whether in the form of truth-seeking, asking hard questions, using formal philosophical tools, or tackling classic philosophy problems, philosophy is a large part of my life and is the bedrock upon which my worldview lies. Today, I highly enjoy reading and writing about philosophy of science (how do we grow scientific knowledge? what justifies induction?), philosophy of mind (what is it like to be something? are the mind and body separate?), logic (are our mathematical systems complete? are they decideable?), and moral philosophy (what is justice? what should we do?)&mdash;much of which is relevant to both my personal growth and my studies in math and computer science. I co-founded a <a class="textlink" href="https://pocab.wordpress.com/" target="_blank">philosophy of computation group</a> at Berkeley, now led by <a class="textlink" a href="https://www.ocf.berkeley.edu/~jjbaek/" target="_blank">Jerome Baek</a>, where students and professors can freely discuss topics in the intersection of philosophy and computer science.
     	<br><br>
-    	Philosophy is not just academic philosophy, and I think an understanding of it can deeply enrich one's life.
+    	Philosophy is not just academic philosophy, and I think an understanding of it can deeply enrich anyone's life.
     	<br><br>
-    	<br><br>
+    	<br>
+    	<a class="textlink" href="index.html">Back</a>
     </p>
-    <p class="nav">
-    	<span class="link"><a href="index.html">Back</a></span>
-     </p>
     
 
 </body>
