--- a/blockchain.html
+++ b/blockchain.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Alexandra Tran</title>
+<title>Blockchain - Alexandra Tran</title>
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -23,11 +23,9 @@
   		<br><br>
 		I currently intern at <a class="textlink" href="https://www.daglabs.com/" target="_blank">DAGlabs</a>, a company building a scalable, privacy-centric cryptocurrency based off of the <a class="textlink" href="http://www.cs.huji.ac.il/~yoni_sompo/pubs/17/SPECTRE.pdf" target="_blank">SPECTRE</a> and <a class="textlink" href="https://eprint.iacr.org/2018/104.pdf" target="_blank">PHANTOM</a> protocols (whose authors lead the company's research and development efforts).
    		<br><br>
-   		<br><br>
+   		<br>
+   		<a class="textlink" href="index.html">Back</a>
     </p>
-    <p class="nav">
-    	<span class="link"><a href="index.html">Back</a></span>
-     </p>
     
 
 </body>
