--- a/literature.html
+++ b/literature.html
@@ -4,16 +4,15 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Alexandra Tran</title>
+<title>Literature - Alexandra Tran</title>
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <p class="text">
     	Reading is my passion.
+    	<br><br><br>
+    	<a class="textlink" href="index.html">Back</a>
     </p>
-    <p class="nav">
-    <span class="link"><a href="index.html">Back</a></span>
-     </p>
     
 
 </body>
