--- a/music.html
+++ b/music.html
@@ -4,14 +4,15 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Alexandra Tran</title>
+<title>Music - Alexandra Tran</title>
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <p class="text">I can't live without music.</p>
-    <p class="nav">
-    	<span class="link"><a href="index.html">Back</a></span>
-     </p>
+    <p class="text">I can't live without music.
+    <br><br><br>
+    <a class="textlink" href="index.html">Back</a>
+    </p>
+    
     
 
 </body>
