--- a/politics.html
+++ b/politics.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Alexandra Tran</title>
+<title>Politics - Alexandra Tran</title>
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -17,17 +17,15 @@
     	<br><br>
     	One of my earliest exposures to libertarian political philosophy was in early high school, when I watched Michael Sandel's Harvard philosophy course on <a class="textlink" href="http://justiceharvard.org/" target="_blank">Justice</a> and read the eponymous book. He brings to life the classic "trolley problem" and its variants, and juxtaposes libertarianism and utilitarianism (which today, I don't think are all that separable, although at the time, my distaste of ends-justify-the-means utilitarianism drew me to libertarianism).
     	<br><br>
-    	I'm a little too young to have been picked up by the Ron Paul movement during the '08 and '12 elections, but I do admire his legacy now. Tom Woods, historian and close colleague of Ron Paul runs <a class="textlink" href="https://tomwoods.com/" target="_blank">two</a> <a class="textlink" href="https://contrakrugman.com/" target="_blank">podcasts</a> that I've been listening to for years, and frankly, I'm constantly surprised by Woods's intellectual rigor.
+    	I'm a little too young to have been picked up by the Ron Paul movement during the '08 and '12 elections, but <a href="images/ronpaul.jpg" class="textlink" target="_blank">I do admire his legacy now</a>. Tom Woods, historian and close colleague of Ron Paul runs <a class="textlink" href="https://tomwoods.com/" target="_blank">two</a> <a class="textlink" href="https://contrakrugman.com/" target="_blank">podcasts</a> that I've been listening to for years, and frankly, I'm constantly surprised by Woods's intellectual rigor.
     	<br><br>
-    	I'm ashamed to have not yet gotten around to thoroughly studying many of the libertarian greats, like Rothbard, Milton Friedman, Sowell, Hayek, and Smith. However, I'm familiar with their work, and regardless, I reject the idea of there existing a literary canon one <i>must</i> consume to reap certain truths.
+    	I'm ashamed to have not yet gotten around to thoroughly studying many of the libertarian greats, like Hayek, Rothbard, Nozick, Milton Friedman, Sowell. However, I'm familiar with their work, and regardless, I reject the idea of there existing a literary canon one <i>must</i> consume to reap certain truths.
     	<br><br>
     	There are many modern libertarian thinkers I enjoy: see <a class="textlink" href="http://spot.colorado.edu/~huemer/" target="_blank">Michael Huemer</a>, who has a unique gift for persuading skeptics of anarchism. His written work has been incredibly influential, especially <i>The Problem of Political Authority</i>; I could not recommend him more. See <a class="textlink" href="http://sites.sandiego.edu/mzwolinski/" target="_blank">Matt Zwolinski</a>, who has amazing articulacy. He leads the Bleeding Heart Libertarians community, and has excellent material debunking traditional assumptions about exploitation and ethical consumerism (note: the study of popular counter-rational narratives, like the protest and regulation against exploitation, is at the top of my interests list). See <a class="textlink" href="http://bcaplan.com/" target="_blank">Bryan Caplan</a>, who writes and speaks on not only politics, but also education, economics, child-rearing, and human rationality. See <a class="textlink" href="http://daviddfriedman.com/" target="_blank">David Friedman</a>. See <a class="textlink" href="http://www.jeffreytucker.me/" target="_blank">Jeffrey Tucker</a>. See <a class="textlink" href="https://www.lewrockwell.com/" target="_blank">Lew Rockwell</a>.
     	<br><br>
-    	<br><br>
+    	<br>
+    	<a class="textlink" href="index.html">Back</a>
     </p>
-    <p class="nav">
-    	<span class="link"><a href="index.html">Back</a></span>
-     </p>
     
 
 </body>
