--- a/index.html
+++ b/index.html
@@ -10,17 +10,11 @@
 <body>
   	<img class="propic" src="images/iguana.png" alt="">
     <h2 class="name">Alexandra Tran</h2>
-    <p class="hometext">Hi there!<br>This is my central Internet presence.
-		<br>These are some of the things I think about on a regular basis:
+    <p class="hometext">
+    <a class="textlink" href="blockchain.html">Blockchain</a><br>
+    <a class="textlink" href="politics.html">Politics</a><br>
+    <a class="textlink" href="philosophy.html">Philosophy</a><br>
     </p>
-    <p class="nav">
-    	<span class="link"><a href="blockchain.html">Blockchain</a></span>
-    	<span class="link"><a href="politics.html">Politics</a></span>
-    	<span class="link"><a href="philosophy.html">Philosophy</a></span>
-    	<span class="link"><a href="music.html">Music</a></span>
-    	<span class="link"><a href="literature.html">Literature</a></span>
-    	<span class="link"><a href="misc.html">Misc</a></span>
-    </p><br>
 	<p class="socials">
 		<a href="mailto:alexandratran@pm.me"><img class="social" src="images/mail.png"></a>
 		<a href="https://www.linkedin.com/in/alexandra-tran/" target="_blank"><img class="social" src="images/linkedin.png"></a>
