--- a/blockchain.html
+++ b/blockchain.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p class="text">
-    	A blockchain is a cryptographically linked list of “blocks”, which contain data about transactions. It is the ledger, the backbone, of most cryptocurrencies (e.g., Bitcoin), and is typically maintained by a decentralized, peer-to-peer network governed by a consensus protocol. It is a data structure and a decentralized ecosystem model that may be applied to non-currency use cases.
+    	A blockchain is a cryptographically linked list of “blocks”, which contain data about transactions. It is the ledger, the backbone, of most cryptocurrencies (e.g., Bitcoin), and is typically maintained by a decentralized, peer-to-peer network governed by a consensus protocol. It is a data structure and a decentralized system design that may be applied to non-currency use cases.
 		<br><br>
 		I like blockchain technology because it is a tool to undermine or improve upon locked-in infrastructure (think banks, land registries, standard networking protocols, supply chains, etc.) in a provably secure manner, subverting traditions of trust, authority, and centralized coordination.
 		<br><br>
@@ -33,6 +33,7 @@
    		<br><br>
    		<br>
    		<a class="textlink" href="index.html">Back</a>
+   		<br><br>
     </p>
     
 
