--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <a class="textlink" href="politics.html">Politics</a><br>
     <a class="textlink" href="philosophy.html">Philosophy</a><br>
     </p>
+    <br>
 	<p class="socials">
 		<a href="mailto:alexandratran@pm.me"><img class="social" src="images/mail.png"></a>
+		<a href="https://rateyourmusic.com/~alextran" target="_blank"><img class="social" src="images/music.png"></a>
 		<a href="https://www.linkedin.com/in/alexandra-tran/" target="_blank"><img class="social" src="images/linkedin.png"></a>
 		<a href="https://medium.com/@alexandratran" target="_blank"><img class="social" src="images/medium.png"></a>
+		
 	</p>
     
 
