upload new site draft w/out text

--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
         href="images/favicon.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Alexandra Tran's Homepage</title>
+    <title>My Résumé</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <script src="javascripts/scale.fix.js"></script>
@@ -16,20 +16,20 @@
     <div class="wrapper">
       <header>
         <div class="icons">
-          <a href="#"><img src="images/headshotlogo.png" alt="Photo of Alex" width="185" style="padding-top:15px;"></a>
-          <a href="#"><img src="images/aboutme2.png" alt="About Me clicked" width="265"></a>
-          <div id="clickable"><a href="writings.html"><img src="images/writingsamples1.png" alt="Writing Samples" width="180"></a></div>
-          <div id="clickable"><a href="anarchy.html"><img src="images/whyanarchy1.png" alt="Why Anarchy?" width="140"></a></div>
-          <div id="clickable"><a href="resume.html"><img src="images/resume1.png" alt="Résumé" width="72"></a></div></div>
+        <div id="headshot"><a href="index.html"><img src="images/headshotlogo.png" alt="Photo of Alex" width="185" style="padding-top:15px;"></a></div>
+        <div id="clickable"><a href="index.html"><img src="images/aboutme1.png" alt="About Me" width="100"></a></div>
+        <div id="clickable"><a href="writings.html"><img src="images/writingsamples1.png" alt="Writing Samples" width="180"></a></div>
+        <div id="clickable"><a href="anarchy.html"><img src="images/whyanarchy1.png" alt="Why Anarchy?" width="140"></a></div>
+        <a href="#"><img src="images/resume2.png" alt="Résumé clicked" width="265"></a>
+        </div>
         <div class="textlinks">
-          <a href="#">about me</a>
+          <a href="index.html">about me</a>
           <a href="writings.html">writing samples</a>
           <a href="anarchy.html">why anarchy?</a>
-          <a href="resume.html">résumé</a>
+          <a href="#">résumé</a>
         </div>
       </header>
       <section>
-        <img src="images/alexandratran.png" alt="Alexandra Tran" style="margin: -30px 0px 20px 0px">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a finibus magna, id interdum leo. Suspendisse potenti. Suspendisse blandit sapien lorem, at tincidunt est volutpat sit amet. Phasellus bibendum vestibulum lectus, vitae vulputate orci tempus in. Curabitur gravida at dolor volutpat dapibus. Curabitur eu tellus et eros dignissim feugiat nec ut tortor. Sed sed lobortis erat. Quisque mollis ligula at est bibendum elementum. Morbi vitae dignissim lacus. Donec pulvinar tellus est, luctus pharetra arcu tempor eget. Sed a sodales risus, in posuere urna.
         </p>
