update style, add .htaccess

--- a/index.html
+++ b/index.html
@@ -16,23 +16,20 @@
       <header>
         <div class="icons">
           <a href="#"><img src="images/profile.svg" alt="Photo of Alex" width="185" style="padding-top:15px;"></a>
-          <a href="#"><img src="images/aboutme2.svg" alt="About Me clicked" width="265"></a>
-          <div id="clickable"><a href="writings.html"><img src="images/writings1.svg" alt="Writing Samples" width="180"></a></div>
-          <div id="clickable"><a href="resume.html"><img src="images/resume1.svg" alt="Résumé" width="72"></a></div>
-          <div id="clickable"><a href="links.html"><img src="images/links1.svg" alt="Links" width="58"></a></div>
+          <a href="#"><img src="images/aboutme2.svg" alt="About Me active" width="265"></a>
+          <div id="clickable"><a href="writings"><img src="images/writings1.svg" alt="Writing Samples" width="180"></a></div>
+          <div id="clickable"><a href="resume"><img src="images/resume1.svg" alt="Résumé" width="72"></a></div>
+          <div id="clickable"><a href="links"><img src="images/links1.svg" alt="Links" width="58"></a></div>
         </div>
         <div class="textlinks">
           <a href="#"><i>about me</i></a>
-          <a href="writings.html">writing samples</a>
-          <a href="resume.html">résumé</a>
-          <a href="links.html">links</a>
+          <a href="writings">writing samples</a>
+          <a href="resume">résumé</a>
+          <a href="links">links</a>
         </div>
       </header>
       <section>
         <div id="logo"><img src="images/alexandratran.svg" alt="Alexandra Tran - in art and anarchy"></div>
-        <p>
-          W<small>ELCOME</small> to my website. My name is Alexandra Tran, but most people call me "Alex". This site gives a brief overview of my personal and professional life.
-          </p>
           <p>
             <b>About Me</b><br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a finibus magna, id interdum leo. Suspendisse potenti. Suspendisse blandit sapien lorem, at tincidunt est volutpat sit amet. Phasellus bibendum vestibulum lectus, vitae vulputate orci tempus in. Curabitur gravida at dolor volutpat dapibus. Curabitur eu tellus et eros dignissim feugiat nec ut tortor. Sed sed lobortis erat. Quisque mollis ligula at est bibendum elementum. Morbi vitae dignissim lacus. Donec pulvinar tellus est, luctus pharetra arcu tempor eget. Sed a sodales risus, in posuere urna.
