--- a/links.html
+++ b/links.html
@@ -17,14 +17,14 @@
         <div class="icons">
           <div id="headshot"><a href="index.html"><img src="images/profile.svg" alt="Photo of Alex" width="185" style="padding-top:15px;"></a></div>
           <div id="clickable"><a href="index.html"><img src="images/aboutme1.svg" alt="About Me" width="100"></a></div>
-          <div id="clickable"><a href="writings.html"><img src="images/writings1.svg" alt="Writing Samples" width="180"></a></div>
-          <div id="clickable"><a href="resume.html"><img src="images/resume1.svg" alt="Résumé" width="72"></a></div>
+          <div id="clickable"><a href="writings"><img src="images/writings1.svg" alt="Writing Samples" width="180"></a></div>
+          <div id="clickable"><a href="resume"><img src="images/resume1.svg" alt="Résumé" width="72"></a></div>
           <a href="#"><img src="images/links2.svg" alt="Links active" width="260"></a>
         </div>
         <div class="textlinks">
           <a href="index.html">about me</a>
-          <a href="writings.html">writing samples</a>
-          <a href="resume.html">résumé</a>
+          <a href="writings">writing samples</a>
+          <a href="resume">résumé</a>
           <a href="#"><i>links</i></a>
         </div>
       </header>
