--- a/writings.html
+++ b/writings.html
@@ -18,14 +18,14 @@
           <div id="headshot"><a href="index.html"><img src="images/profile.svg" alt="Photo of Alex" width="185" style="padding-top:15px;"></a></div>
           <div id="clickable"><a href="index.html"><img src="images/aboutme1.svg" alt="About Me" width="100"></a></div>
           <a href="#"><img src="images/writings2.svg" alt="Writing Samples active" width="350"></a>
-          <div id="clickable"><a href="resume.html"><img src="images/resume1.svg" alt="Résumé" width="72"></a></div>
-          <div id="clickable"><a href="links.html"><img src="images/links1.svg" alt="Links" width="58"></a></div>
+          <div id="clickable"><a href="resume"><img src="images/resume1.svg" alt="Résumé" width="72"></a></div>
+          <div id="clickable"><a href="links"><img src="images/links1.svg" alt="Links" width="58"></a></div>
         </div>
         <div class="textlinks">
           <a href="index.html">about me</a>
           <a href="#"><i>writing samples</i></a>
-          <a href="resume.html">résumé</a>
-          <a href="links.html">links</a>
+          <a href="resume">résumé</a>
+          <a href="links">links</a>
         </div>
       </header>
       <section>
