--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <div class="icons">
           <a href="#"><img src="images/profile.svg" alt="Photo of Alex" width="185" style="padding-top:15px;"></a>
           <a href="#"><img src="images/aboutme2.svg" alt="About Me active" width="265"></a>
-          <div id="clickable"><a href="writings"><img src="images/writings1.svg" alt="Writing Samples" width="180"></a></div>
-          <div id="clickable"><a href="resume"><img src="images/resume1.svg" alt="Résumé" width="72"></a></div>
-          <div id="clickable"><a href="links"><img src="images/links1.svg" alt="Links" width="58"></a></div>
+          <div id="clickable"><a href="writings.html"><img src="images/writings1.svg" alt="Writing Samples" width="180"></a></div>
+          <div id="clickable"><a href="resume.html"><img src="images/resume1.svg" alt="Résumé" width="72"></a></div>
+          <div id="clickable"><a href="links.html"><img src="images/links1.svg" alt="Links" width="58"></a></div>
         </div>
         <div class="textlinks">
           <a href="#"><i>about me</i></a>
-          <a href="writings">writing samples</a>
-          <a href="resume">résumé</a>
-          <a href="links">links</a>
+          <a href="writings.html">writing samples</a>
+          <a href="resume.html">résumé</a>
+          <a href="links.html">links</a>
         </div>
       </header>
       <section>
