--- a/resume.html
+++ b/resume.html
@@ -15,15 +15,15 @@
     <div class="wrapper">
       <header>
         <div class="icons">
-          <div id="headshot"><a href="/"><img src="images/profile.svg" alt="Photo of Alex" width="185" style="padding-top:15px;"></a></div>
-          <div id="clickable"><a href="/"><img src="images/aboutme1.svg" alt="About Me" width="100"></a></div>
+          <div id="headshot"><a href="index.html"><img src="images/profile.svg" alt="Photo of Alex" width="185" style="padding-top:15px;"></a></div>
+          <div id="clickable"><a href="index.html"><img src="images/aboutme1.svg" alt="About Me" width="100"></a></div>
           <div id="clickable"><a href="writings.html"><img src="images/writings1.svg" alt="Writing Samples" width="180"></a></div>
           
           <a href="#"><img src="images/resume2.svg" alt="Résumé active" width="265"></a>
           <div id="clickable"><a href="links.html"><img src="images/links1.svg" alt="Links" width="58"></a></div>
         </div>
         <div class="textlinks">
-          <a href="/">about me</a>
+          <a href="index.html">about me</a>
           <a href="writings.html">writing samples</a>
           <a href="#"><i>résumé</i></a>
           <a href="links.html">links</a>
