--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
+
 <html>
+
   <head profile="http://www.w3.org/2005/10/profile">
     <title>Alexandra Tran</title>
-    <link rel="icon" type="image/png" href="images/favicon.svg">
+    <link rel="icon" type="image" href="images/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/styles.css">
@@ -11,15 +13,18 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width">
   </head>
+
   <body>
+
     <div class="wrapper">
+      
       <header>
         <div class="icons">
-          <a href="#"><img src="images/profile.svg" alt="Photo of Alex" width="185" style="padding-top:15px;"></a>
+          <a href="#" id="profile"><img src="images/profile.svg" alt="Photo of Alex"></a>
           <a href="#"><img src="images/aboutme2.svg" alt="About Me active" width="265"></a>
-          <div id="clickable"><a href="writings.html"><img src="images/writings1.svg" alt="Writing Samples" width="180"></a></div>
-          <div id="clickable"><a href="resume.html"><img src="images/resume1.svg" alt="Résumé" width="72"></a></div>
-          <div id="clickable"><a href="links.html"><img src="images/links1.svg" alt="Links" width="58"></a></div>
+          <a href="writings.html" id="clickable"><img src="images/writings1.svg" alt="Writing Samples" width="180"></a>
+          <a href="resume.html" id="clickable"><img src="images/resume1.svg" alt="Résumé" width="72"></a>
+          <a href="links.html" id="clickable"><img src="images/links1.svg" alt="Links" width="58"></a>
         </div>
         <div class="textlinks">
           <a href="#"><i>about me</i></a>
@@ -28,11 +33,12 @@
           <a href="links.html">links</a>
         </div>
       </header>
+
       <section>
         <div id="logo"><img src="images/alexandratran.svg" alt="Alexandra Tran - in art and anarchy"></div>
-          <p>
-            <b>About Me</b><br>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a finibus magna, id interdum leo. Suspendisse potenti. Suspendisse blandit sapien lorem, at tincidunt est volutpat sit amet. Phasellus bibendum vestibulum lectus, vitae vulputate orci tempus in. Curabitur gravida at dolor volutpat dapibus. Curabitur eu tellus et eros dignissim feugiat nec ut tortor. Sed sed lobortis erat. Quisque mollis ligula at est bibendum elementum. Morbi vitae dignissim lacus. Donec pulvinar tellus est, luctus pharetra arcu tempor eget. Sed a sodales risus, in posuere urna.
+        <p>
+          <b>About Me</b><br>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a finibus magna, id interdum leo. Suspendisse potenti. Suspendisse blandit sapien lorem, at tincidunt est volutpat sit amet. Phasellus bibendum vestibulum lectus, vitae vulputate orci tempus in. Curabitur gravida at dolor volutpat dapibus. Curabitur eu tellus et eros dignissim feugiat nec ut tortor. Sed sed lobortis erat. Quisque mollis ligula at est bibendum elementum. Morbi vitae dignissim lacus. Donec pulvinar tellus est, luctus pharetra arcu tempor eget. Sed a sodales risus, in posuere urna.
         </p>
         <p>
           Nam et interdum dui. Cras scelerisque ullamcorper enim, non iaculis magna maximus in. Aliquam et nisl tellus. Nullam egestas nunc et cursus posuere. Aliquam bibendum ante eget nulla iaculis, sit amet malesuada justo sagittis. Nunc tincidunt nunc ac neque congue, sed posuere orci porttitor. Praesent eleifend eget magna a mollis. Ut pretium quis felis non sagittis. Nullam auctor tellus non nisi scelerisque, in rutrum sem finibus. Nulla convallis, sem a iaculis lacinia, urna sem consequat ipsum, vitae dictum ante mi ut justo. Phasellus consequat tincidunt augue eget congue. Quisque dui arcu, euismod bibendum bibendum id, posuere vel felis.
@@ -48,15 +54,17 @@
         </p>
         <div id="license"><p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
           <a rel="license"
-             href="http://creativecommons.org/publicdomain/zero/1.0/">
+             href="http://creativecommons.org/publicdomain/zero/1.0/" target="_blank">
             <img src="https://licensebuttons.net/p/zero/1.0/80x15.png" style="border-style: none;" alt="CC0" />
           </a>
-          <br />
+          <br/>
           I have waived all copyright and related or neighboring rights to
           this site.
         </p></div>
-
       </section>
+
     </div>
+
   </body>
+
 </html>
