--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,10 @@
 <!doctype html>
+
 <html>
+
   <head profile="http://www.w3.org/2005/10/profile">
     <title>Résumé ⋅ Alexandra Tran</title>
-    <link rel="icon" type="image/png" href="images/favicon.svg">
+    <link rel="icon" type="image" href="images/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/styles.css">
@@ -11,16 +13,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
   </head>
+
   <body>
+
     <div class="wrapper">
+
       <header>
         <div class="icons">
-          <div id="headshot"><a href="index.html"><img src="images/profile.svg" alt="Photo of Alex" width="185" style="padding-top:15px;"></a></div>
-          <div id="clickable"><a href="index.html"><img src="images/aboutme1.svg" alt="About Me" width="100"></a></div>
-          <div id="clickable"><a href="writings.html"><img src="images/writings1.svg" alt="Writing Samples" width="180"></a></div>
-          
+          <a href="index.html" id="profile"><img src="images/profile.svg" alt="Photo of Alex"></a>
+          <a href="index.html" id="clickable"><img src="images/aboutme1.svg" alt="About Me" width="100"></a>
+          <a href="writings.html" id="clickable"><img src="images/writings1.svg" alt="Writing Samples" width="180"></a>          
           <a href="#"><img src="images/resume2.svg" alt="Résumé active" width="265"></a>
-          <div id="clickable"><a href="links.html"><img src="images/links1.svg" alt="Links" width="58"></a></div>
+          <a href="links.html" id="clickable"><img src="images/links1.svg" alt="Links" width="58"></a>
         </div>
         <div class="textlinks">
           <a href="index.html">about me</a>
@@ -29,9 +33,10 @@
           <a href="links.html">links</a>
         </div>
       </header>
+
       <section>
         <p>
-          <b>Resume</b><br>
+          <b>Résumé</b><br>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a finibus magna, id interdum leo. Suspendisse potenti. Suspendisse blandit sapien lorem, at tincidunt est volutpat sit amet. Phasellus bibendum vestibulum lectus, vitae vulputate orci tempus in. Curabitur gravida at dolor volutpat dapibus. Curabitur eu tellus et eros dignissim feugiat nec ut tortor. Sed sed lobortis erat. Quisque mollis ligula at est bibendum elementum. Morbi vitae dignissim lacus. Donec pulvinar tellus est, luctus pharetra arcu tempor eget. Sed a sodales risus, in posuere urna.
         </p>
         <p>
@@ -46,8 +51,10 @@
         <p>
           Donec vitae velit eget quam hendrerit congue. Integer sit amet libero lacinia enim feugiat ultrices ut et nisl. Morbi malesuada sapien non magna rutrum, in lacinia tortor malesuada. Nulla consectetur nulla in erat consectetur, sed consectetur augue cursus. Etiam malesuada ornare est, at tristique nulla vestibulum ut. Etiam sit amet imperdiet ante, at congue turpis. Ut sagittis lobortis urna.
         </p>
-
       </section>
+
     </div>
+
   </body>
+
 </html>
