--- a/writings.html
+++ b/writings.html
@@ -1,8 +1,10 @@
 <!doctype html>
+
 <html>
+
   <head profile="http://www.w3.org/2005/10/profile">
     <title>Writing Samples ⋅ Alexandra Tran</title>
-    <link rel="icon" type="image/png" href="images/favicon.svg">
+    <link rel="icon" type="image" href="images/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/styles.css">
@@ -11,15 +13,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
   </head>
+
   <body>
+
     <div class="wrapper">
+
       <header>
         <div class="icons">
-          <div id="headshot"><a href="index.html"><img src="images/profile.svg" alt="Photo of Alex" width="185" style="padding-top:15px;"></a></div>
-          <div id="clickable"><a href="index.html"><img src="images/aboutme1.svg" alt="About Me" width="100"></a></div>
+          <a href="index.html" id="profile"><img src="images/profile.svg" alt="Photo of Alex"></a>
+          <a href="index.html" id="clickable"><img src="images/aboutme1.svg" alt="About Me" width="100"></a>
           <a href="#"><img src="images/writings2.svg" alt="Writing Samples active" width="350"></a>
-          <div id="clickable"><a href="resume.html"><img src="images/resume1.svg" alt="Résumé" width="72"></a></div>
-          <div id="clickable"><a href="links.html"><img src="images/links1.svg" alt="Links" width="58"></a></div>
+          <a href="resume.html" id="clickable"><img src="images/resume1.svg" alt="Résumé" width="72"></a>
+          <a href="links.html" id="clickable"><img src="images/links1.svg" alt="Links" width="58"></a>
         </div>
         <div class="textlinks">
           <a href="index.html">about me</a>
@@ -28,6 +33,7 @@
           <a href="links.html">links</a>
         </div>
       </header>
+
       <section>
         <p>
           <b>Writing Samples</b><br>
@@ -45,8 +51,10 @@
         <p>
           Donec vitae velit eget quam hendrerit congue. Integer sit amet libero lacinia enim feugiat ultrices ut et nisl. Morbi malesuada sapien non magna rutrum, in lacinia tortor malesuada. Nulla consectetur nulla in erat consectetur, sed consectetur augue cursus. Etiam malesuada ornare est, at tristique nulla vestibulum ut. Etiam sit amet imperdiet ante, at congue turpis. Ut sagittis lobortis urna.
         </p>
-
       </section>
+
     </div>
+
   </body>
+
 </html>
