--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
           <span><a href="index.html"><img src="assets/aboutme1.svg" alt="About Me" width="100"></a></span>
           <span><a href="writings.html"><img src="assets/writings1.svg" alt="Writing Samples" width="180"></a></span>          
           <span><img src="assets/resume2.svg" alt="Résumé active" width="265"></span>
-          <span><a href="links.html"><img src="assets/links1.svg" alt="Links" width="58"></span>
+          <span><a href="links.html"><img src="assets/links1.svg" alt="Links" width="58"></a></span>
         </div>
         <div class="textlinks">
           <a href="index.html">about me</a>
